trying to fix spacing in navbar

--- a/WebVisualizations/assets/css/styles.css
+++ b/WebVisualizations/assets/css/styles.css
@@ -60,6 +60,7 @@ img {
     font-size: 28pt;
     padding-top: 12px;
     margin-right: 0px;
+    padding-right: 0px;
 }
 
 #dropdowndivider {
